syntax = "proto3";

option go_package = "./proto";

package shortener;
import "google/api/annotations.proto";

service Shortener {
  rpc PostUrl (LongUrl) returns (ShortUrl) {
    option (google.api.http) = {
      post: "/v1/url"
      body: "*"
    };
  }
  rpc GetUrl (ShortUrl) returns (LongUrl) {
    option (google.api.http) = {
      get: "/v1/url/{shortUrl}"
    };
  }
}

message LongUrl {
  string longUrl = 1;
}

message ShortUrl {
  string shortUrl = 1;
}